src/test/c/accept/41-multiple-privacy.arcx
@exposed @eternal variable: int = 5; 