src/test/c/reject/09-missing-semicolon.arcx
a:int = 5
b:int = 6; 